--- a/.editorconfig
+++ b/.editorconfig
@@ -9,10 +9,13 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-# Use 4 spaces for the Python files
 [*.py]
 indent_size = 4
 max_line_length = 80
+
+[*.go]
+indent_size = 4
+indent_style = tab
 
 # The JSON files contain newlines inconsistently
 [*.json]
